--- a/index.html
+++ b/index.html
@@ -9,14 +9,170 @@
 </head>
 
 <body>
-
-    <head>
-
-    </head>
+    <header>
+        <img src="./imagenes/logo.svg" alt="Logo Sportit">
+        <nav>
+            <ul>
+                <li>
+                    <a> Sports</a>
+                </li>
+                <li>
+                    <a>Products</a>
+                </li>
+                <li>
+                    <a>About Us</a>
+                </li>
+                <li>
+                    <a> Trainning</a>
+                </li>
+                <li>
+                    <a>Comunnity</a>
+                </li>
+            </ul>
+        </nav>
+        <button>Contact</button>
+    </header>
     <main>
+        <section>
+            <img src="./imagenes/padel-intro.png" alt="Tenista">
+            <h1>LIVE: Follow the Telcel Huawei Mexico Open 2022 for free</h1>
+            <p>
+                The final Open of the 2022 World Padel Tour season is underway,
+                don't miss out on any of the action!
+            </p>
+            <button>Contact</button>
+        </section>
+        <section>
+            <h2>
+                What´s different between pros?
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Maecenas aliquet consequat purus sit amet sodales. In faucibus ut nisi
+                eu dignissim. Vestibulum fringilla velit sed tincidunt tincidunt.
+            </p>
+        </section>
+        <section>
+            <div>
+                <span>01</span>
+                <div>
+                    <h3>Track company-wide progress:</h3>
+                    <p>
+                        Donec elit est, mattis lacinia arcu eu, efficitur consequat augue.
+                        Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla.
+                        Etiam vel orci rutrum, placerat quam eget, consequat dolor.
+                    </p>
+                </div>
+
+            </div>
+            <div>
+                <span>02</span>
+                <div>
+                    <h3>Advance built-in reports</h3>
+                    <p>
+                        Donec elit est, mattis lacinia arcu eu, efficitur consequat augue.
+                        Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla.
+                        Etiam vel orci rutrum, placerat quam eget, consequat dolor.
+                    </p>
+                </div>
+
+            </div>
+            <div>
+                <span>03</span>
+                <div>
+                    <h3>Everything you need in one place</h3>
+                    <p>
+                        Donec elit est, mattis lacinia arcu eu, efficitur consequat augue.
+                        Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla.
+                        Etiam vel orci rutrum, placerat quam eget, consequat dolor.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section>
+            <h2>Best of the month</h2>
+            <div>
+                <img src="./imagenes/avatar-sanyo.png" alt="Perfil Sanyo">
+                <div>
+                    <h3>Sanyo</h3>
+                    <p>
+                        Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris,
+                        ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus mus.
+                    </p>
+                </div>
+
+            </div>
+            <div>
+                <img src="./imagenes/avatar.lebron.png" alt="Perfil Lebron">
+                <div>
+                    <h3>Lebron</h3>
+                    <p>
+                        Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris,
+                        ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus mus.
+                    </p>
+                </div>
+
+            </div>
+            <div>
+                <img src="./imagenes/avatar-navarro.png" alt="Perfil Navarro">
+                <div>
+                    <h3>Navarro</h3>
+                    <p>
+                        Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris,
+                        ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus mus.
+                    </p>
+                </div>
+
+            </div>
+            <button>More</button>
+        </section>
+        <section>
+            <h2>Get to know the best teams of the year</h2>
+            <button>Go for it</button>
+        </section>
 
     </main>
-    <footer></footer>
+    <footer>
+        <div>
+            <img src="./imagenes/logo.svg" alt="">
+            <a href="https://www.facebook.com/" target="_blank">
+                <img src="./imagenes/icon-facebook.svg" alt="icon-facebook">
+            </a>
+            <a href="https://www.youtube.com/" target="_blank">
+                <img src="./imagenes/icon-youtube.svg" alt="icon-youtube">
+            </a>
+            <a href="https://www.twitter.com/" target="_blank">
+                <img src="./imagenes/icon-twitter.svg" alt="icon-twitter">
+            </a>
+            <a href="https://www.pinterest.es/" target="_blank">
+                <img src="./imagenes/icon-pinterest.svg" alt="icon-pinterest">
+            </a>
+            <a href="https://www.instagram.com/" target="_blank">
+                <img src="./imagenes/icon-instagram.svg" alt="icon-instagram">
+            </a>
+        </div>
+        <div>
+            <a href="">Home</a>
+            <a href="">Pircing</a>
+            <a href="">Products</a>
+            <a href="">About Us</a>
+            <div>
+                <a href=""> Trainning</a>
+                <a href="">Community</a>
+                <a href="">Privacy Policy</a>
+            </div>
+        </div>
+        <div>
+            <form action="">
+                <input type="email">
+            </form>
+            <button>Go</button>
+            <span>Copyright 2020. All Rights Reserved</span>
+        </div>
+    </footer>
 </body>
 
 </html>
