--- a/index.html
+++ b/index.html
@@ -7,61 +7,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Sportit</title>
 </head>
 
 <body>
-    <header class="flex flex-around header-page">
-        <img src="./imagenes/logo.svg" alt="Logo Sportit">
-        <nav>
-            <ul class=" flex list-nav">
-                <li>
-                    <a> Sports</a>
-                </li>
-                <li>
-                    <a>Products</a>
-                </li>
-                <li>
-                    <a>About Us</a>
-                </li>
-                <li>
-                    <a> Trainning</a>
-                </li>
-                <li>
-                    <a>Comunnity</a>
-                </li>
-            </ul>
-        </nav>
-        <button class="btn btn-primary">Contact</button>
+    <header class=" flex flex-center header-page">
+        <div class=" flex flex-around page-size">
+            <img src="./imagenes/logo.svg" alt="Logo Sportit">
+            <nav>
+                <ul class=" flex list-nav">
+                    <li>
+                        <a href="#sports"> Sports</a>
+                    </li>
+                    <li>
+                        <a href="#products">Products</a>
+                    </li>
+                    <li>
+                        <a href="#about">About Us</a>
+                    </li>
+                    <li>
+                        <a href="#trainnings"> Trainning</a>
+                    </li>
+                    <li>
+                        <a href="#community">Comunnity</a>
+                    </li>
+                </ul>
+            </nav>
+            <button class="btn btn-shadow">Contact</button>
+        </div>
+
     </header>
     <main>
-        <section class="flex flex-around">
-            <img src="./imagenes/padel-intro.png" alt="Tenista">
-            <div class="flex-column container-section">
-                <h1>LIVE: Follow the Telcel Huawei Mexico Open 2022 for free</h1>
-                <p class="text-description">
-                    The final Open of the 2022 World Padel Tour season is underway,
-                    don't miss out on any of the action!
-                </p>
-                <button class="btn ">Contact</button>
+        <section id="sports" class="flex flex-center page-height ">
+            <div class="page-size ">
+                <div class=" flex flex-center flex-around">
+                    <img src="./imagenes/padel-intro.png" alt="Tenista">
+                    <div class="flex-column container-section">
+                        <h1>LIVE: Follow the Telcel Huawei Mexico Open 2022 for free</h1>
+                        <p class="text-description">
+                            The final Open of the 2022 World Padel Tour season is underway,
+                            don't miss out on any of the action!
+                        </p>
+                        <button class="btn ">Contact</button>
+                    </div>
+                </div>
             </div>
         </section>
-        <section class=" flex flex-around container-pros">
-            <h2>
-                What´s different between pros?
-            </h2>
-            <p class="text-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Maecenas aliquet consequat purus sit amet sodales. In faucibus ut nisi
-                eu dignissim. Vestibulum fringilla velit sed tincidunt tincidunt.
-            </p>
+        <section id="products" class=" flex flex-center container-pros">
+            <div class=" flex section-center">
+                <h2>
+                    What´s different between pros?
+                </h2>
+                <p class="text-description">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Maecenas aliquet consequat purus sit amet sodales. In faucibus ut nisi
+                    eu dignissim. Vestibulum fringilla velit sed tincidunt tincidunt.
+                </p>
+            </div>
         </section>
-        <section class="flex container-cards">
+        <section id="about" class="flex container-cards">
             <div class=" flex card">
                 <span class="number-card">01</span>
-                <div class=" flex-column container-text-card">
+                <div class=" flex-column">
                     <h3>Track company-wide progress:</h3>
                     <p class="text-card">
                         Donec elit est, mattis lacinia arcu eu, efficitur consequat augue.
@@ -73,7 +82,7 @@
             </div>
             <div class=" flex card">
                 <span class="number-card">02</span>
-                <div class=" flex-column container-text-card">
+                <div class=" flex-column ">
                     <h3>Advance built-in reports</h3>
                     <p class="text-card">
                         Donec elit est, mattis lacinia arcu eu, efficitur consequat augue.
@@ -85,7 +94,7 @@
             </div>
             <div class=" flex card">
                 <span class="number-card">03</span>
-                <div class=" flex-column container-text-card">
+                <div class=" flex-column">
                     <h3>Everything you need in one place</h3>
                     <p class="text-card">
                         Donec elit est, mattis lacinia arcu eu, efficitur consequat augue.
@@ -95,7 +104,7 @@
                 </div>
             </div>
         </section>
-        <section class=" flex-column flex-center container3">
+        <section id="trainnings" class=" flex-column flex-center container3">
             <h2>Best of the month</h2>
             <div class=" flex container-article">
                 <article class=" flex-column deport-article">
@@ -134,17 +143,20 @@
             </div>
             <button class="btn">More</button>
         </section>
-        <section class=" flex flex-around container-pros">
-            <h2>Get to know the best teams of the year</h2>
-            <button class="btn btn-secondary btn-shadow">Go for it</button>
+        <section class=" flex flex-center container-pros">
+            <div class="flex section-center">
+                <h2>Get to know the best teams of the year</h2>
+                <button class="btn btn-secondary btn-shadow">Go for it</button>
+            </div>
+
         </section>
 
     </main>
-    <footer class="flex-column">
+    <footer id="community" class="flex-column flex-center flex-footer">
         <div class=" flex container-footer">
             <div class="flex-column logo-social">
                 <img src="./imagenes/LogoFooter.svg" alt="Logo de pagina" class="logo-page">
-                <div>
+                <div class="flex spacing">
                     <a href="https://www.facebook.com/" target="_blank">
                         <img src="./imagenes/icon-facebook.svg" alt="icon-facebook">
                     </a>
@@ -164,25 +176,28 @@
 
             </div>
             <div class="flex-column spacing">
-                <a href="">Home</a>
-                <a href="">Pircing</a>
-                <a href="">Products</a>
-                <a href="">About Us</a>
+                <a href="#home" target="_blank">Home</a>
+                <a href="#pircing" target="_blank">Pircing</a>
+                <a href="#products" target="_blank">Products</a>
+                <a href="#about" target="_blank">About Us</a>
             </div>
             <div class="flex-column spacing">
-                <a href=""> Trainning</a>
-                <a href="">Community</a>
-                <a href="">Privacy Policy</a>
+                <a href="trainning" target="_blank"> Trainning</a>
+                <a href="community" target="_blank">Community</a>
+                <a href="privacy" target="_blank">Privacy Policy</a>
             </div>
             <div class="flex-column spacing">
-                <form action="">
-                    <input type="email">
-                    <button>Go</button>
+                <form action="enviar_email" method="POST">
+                    <input type="email" name="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
+                        placeholder="Update in your inbox...">
+                    <button type="submit" class="btn btn-form">Go</button>
                 </form>
             </div>
         </div>
+        <div class="copyrigth-footer">
+            <p>Copyright 2020. All Rights Reserved</p>
+        </div>
 
-        <span>Copyright 2020. All Rights Reserved</span>
     </footer>
 </body>
 
