feat:se corrigio el centrado del footer

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         </section>
 
     </main>
-    <footer id="community" class="flex-column flex-center flex-footer">
+    <footer id="community" class="flex-column flex-center">
         <div class=" flex container-footer">
             <div class="flex-column align-section logo-social">
                 <img class="logo-footer spacing" src="./imagenes/LogoFooter.svg" alt="Logo de pagina" class="logo-page">
