feat:modificando clases

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <footer id="community" class="flex-column flex-center">
         <div class=" flex container-footer">
             <div class="flex-column align-section logo-social">
-                <img class="logo-footer spacing" src="./imagenes/LogoFooter.svg" alt="Logo de pagina" class="logo-page">
+                <img class="logo-footer spacing" src="./imagenes/LogoFooter.svg" alt="Logo de pagina">
                 <div class="flex  spacing spacing-gap2">
                     <a href="https://www.facebook.com/" target="_blank">
                         <img src="./imagenes/icon-facebook.svg" alt="icon-facebook">
